--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <a href="TaroX.html">TarotX</a></br>
 <a href="LenormandX.html">LenormandX</a></br>
 <a href="TaroIntuitivo.html">Tarô Intuitivo</a></br>
-<a href="TaroLuzESombra.hyml">Tarô Luz e Sombra</a></br>
+<a href="TaroLuzESombra.html">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreais.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLux.html">Lenormand Lux</a></br>
 <p>Teste</p>
