--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<base href="." />
+<meta charset="UTF-8" />
+<title>Omni Akashica - Tarô Luz e Sombra</title>
 <body>
 <h1>Omni Akashica</h1>
 <a href="TaroX.html">TarotX</a></br>
@@ -8,6 +11,6 @@
 <a href="TaroLuzESombra.html">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreais.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLux.html">Lenormand Lux</a></br>
-<p>Teste</p>
+<p>Omni Akashica (2024) - Todos direitos reservados</p>
 </body>
 </html>
