--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <base href="." />
 <meta charset="UTF-8" />
-<title>Omni Akashica - Tarô Luz e Sombra</title>
+<title>Omni Akashica - Home</title>
 <body>
 <h1>Omni Akashica</h1>
 <a href="TaroX.html">TarotX</a></br>
