--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-<base href="." />
-<meta charset="UTF-8" />
-<title>Omni Akashica - Home</title>
 <body>
 <h1>Omni Akashica</h1>
+</br></br>
+<h2>Computador</h2>
 <a href="TaroX.html">TarotX</a></br>
 <a href="LenormandX.html">LenormandX</a></br>
 <a href="TaroIntuitivo.html">Tarô Intuitivo</a></br>
-<a href="TaroLuzESombra.html">Tarô Luz e Sombra</a></br>
+<a href="TaroLuzESombra.hyml">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreais.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLux.html">Lenormand Lux</a></br>
-<p>Omni Akashica (2024) - Todos direitos reservados</p>
+</br></br>
+<h2>Celular</h2>
+<a href="TaroXm.html">TarotX</a></br>
+<a href="LenormandXm.html">LenormandX</a></br>
+<a href="TaroIntuitivom.html">Tarô Intuitivo</a></br>
+<a href="TaroLuzESombram.html">Tarô Luz e Sombra</a></br>
+<a href="TaroArcanosSurreaism.html">Tarô Arcanos Surreais</a></br>
+<a href="LenormandLuxm.html">Lenormand Lux</a></br>
 </body>
 </html>
