--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <a href="TaroLuzESombram.html">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreaism.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLuxm.html">Lenormand Lux</a></br>
+<p>Omni Akashica (2024) - Todos direitos reservados</p>
 </body>
 </html>
