--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <a href="TaroLuzESombra.hyml">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreais.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLux.html">Lenormand Lux</a></br>
+<a href="TaroRiderWaite.html">Tarô Rider Waite</a></br>
 </br></br>
 <h2>Celular</h2>
 <a href="TaroXm.html">TarotX</a></br>
@@ -18,6 +19,7 @@
 <a href="TaroLuzESombram.html">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreaism.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLuxm.html">Lenormand Lux</a></br>
+<a href="TaroRiderWaitem.html">Tarô Rider Waite</a></br>
 <p>Omni Akashica (2024) - Todos direitos reservados</p>
 </body>
 </html>
