--- a/TaroArcanosSurreaism.html
+++ b/TaroArcanosSurreaism.html
@@ -161,10 +161,10 @@ const tarotCards = [
     { name: "O Hierofante", number: 5, suit: "Arcanos Maiores", img: "tarosurreais/Surreais05.png" },
     { name: "Os Enamorados", number: 6, suit: "Arcanos Maiores", img: "tarosurreais/Surreais06.png" },
     { name: "O Carro", number: 7, suit: "Arcanos Maiores", img: "tarosurreais/Surreais07.png" },
-    { name: "A Justiça", number: 8, suit: "Arcanos Maiores", img: "tarosurreais/Surreais08.png" },
+    { name: "A Força", number: 8, suit: "Arcanos Maiores", img: "tarosurreais/Surreais08.png" },
     { name: "O Eremita", number: 9, suit: "Arcanos Maiores", img: "tarosurreais/Surreais09.png" },
     { name: "A Roda da Fortuna", number: 10, suit: "Arcanos Maiores", img: "tarosurreais/Surreais10.png" },
-    { name: "a Força", number: 11, suit: "Arcanos Maiores", img: "tarosurreais/Surreais11.png" },
+    { name: "a Justiça", number: 11, suit: "Arcanos Maiores", img: "tarosurreais/Surreais11.png" },
     { name: "O Enforcado", number: 12, suit: "Arcanos Maiores", img: "tarosurreais/Surreais12.png" },
     { name: "A Morte", number: 13, suit: "Arcanos Maiores", img: "tarosurreais/Surreais13.png" },
     { name: "A temperança", number: 14, suit: "Arcanos Maiores", img: "tarosurreais/Surreais14.png" },
@@ -175,7 +175,7 @@ const tarotCards = [
     { name: "O Sol", number: 19, suit: "Arcanos Maiores", img: "tarosurreais/Surreais19.png" },
     { name: "O Julgamento", number: 20, suit: "Arcanos Maiores", img: "tarosurreais/Surreais20.png" },
     { name: "O Mundo", number: 21, suit: "Arcanos Maiores", img: "tarosurreais/Surreais21.png" },
-  // ... adicione todas as cartas aqui
+  // ... adicione todas as cartas aqui!
 ];
 
 let deck = [...tarotCards];
