--- a/TaroRiderWaite.html
+++ b/TaroRiderWaite.html
@@ -95,7 +95,7 @@ body {
 
 <script>
 const tarotCards = [
-{ name: "O Louco", number: 0, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar00.jpg" },
+  { name: "O Louco", number: 0, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar00.jpg" },
   { name: "O Mago", number: 1, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar01.jpg" },
   { name: "A Sacerdotisa", number: 2, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar02.jpg" },
   { name: "A Imperatriz", number: 3, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar03.jpg" },
@@ -103,10 +103,10 @@ const tarotCards = [
   { name: "O Hierofante", number: 5, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar05.jpg" },
   { name: "Os Enamorados", number: 6, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar06.jpg" },
   { name: "O Carro", number: 7, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar07.jpg" },
-  { name: "A Justiça", number: 8, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar08.jpg" },
+  { name: "A Força", number: 8, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar08.jpg" },
   { name: "O Eremita", number: 9, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar09.jpg" },
   { name: "A Roda da Fortuna", number: 10, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar10.jpg" },
-  { name: "a Força", number: 11, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar11.jpg" },
+  { name: "A Justiça", number: 11, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar11.jpg" },
   { name: "O Enforcado", number: 12, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar12.jpg" },
   { name: "A Morte", number: 13, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar13.jpg" },
   { name: "A temperança", number: 14, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar14.jpg" },
@@ -117,7 +117,7 @@ const tarotCards = [
   { name: "O Sol", number: 19, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar19.jpg" },
   { name: "O Julgamento", number: 20, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar20.jpg" },
   { name: "O Mundo", number: 21, suit: "Arcanos Maiores", img: "https://www.sacred-texts.com/tarot/pkt/img/ar21.jpg" },
-  { name: "1 de copas", number: 22, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cuac.jpg" },
+  { name: "Ás de copas", number: 22, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cuac.jpg" },
     { name: "2 de copas", number: 23, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cu02.jpg" },
     { name: "3 de copas", number: 24, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cu03.jpg" },
     { name: "4 de copas", number: 25, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cu04.jpg" },
@@ -131,7 +131,7 @@ const tarotCards = [
     { name: "Cavaleiro de copas", number: 33, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cukn.jpg" },
     { name: "Rainha de copas", number: 34, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cuqu.jpg" },
     { name: "Rei de copas", number: 35, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/cuki.jpg" },
-    { name: "1 de espadas", number: 36, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/swac.jpg" },
+    { name: "Ás de espadas", number: 36, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/swac.jpg" },
     { name: "2 de espadas", number: 37, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/sw02.jpg" },
     { name: "3 de espadas", number: 38, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/sw03.jpg" },
     { name: "4 de espadas", number: 39, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/sw04.jpg" },
@@ -145,7 +145,7 @@ const tarotCards = [
     { name: "Cavaleiro de espadas", number: 47, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/swkn.jpg" },
     { name: "Rainha de espadas", number: 48, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/swqu.jpg" },
     { name: "Rei de espadas", number: 49, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/swki.jpg" },
-    { name: "1 de ouros", number: 50, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/peac.jpg" },
+    { name: "Ás de ouros", number: 50, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/peac.jpg" },
     { name: "2 de ouros", number: 51, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/pe02.jpg" },
     { name: "3 de ouros", number: 52, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/pe03.jpg" },
     { name: "4 de ouros", number: 53, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/pe04.jpg" },
@@ -159,7 +159,7 @@ const tarotCards = [
     { name: "Cavaleiro de ouros", number: 61, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/pekn.jpg" },
     { name: "Rainha de ouros", number: 62, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/pequ.jpg" },
     { name: "Rei de ouros", number: 63, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/peki.jpg" },
-    { name: "1 de paus", number: 64, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/waac.jpg" },
+    { name: "Ás de paus", number: 64, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/waac.jpg" },
     { name: "2 de paus", number: 65, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/wa02.jpg" },
     { name: "3 de paus", number: 66, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/wa03.jpg" },
     { name: "4 de paus", number: 67, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/wa04.jpg" },
@@ -173,7 +173,7 @@ const tarotCards = [
     { name: "Cavaleiro de paus", number: 75, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/wakn.jpg" },
     { name: "Rainha de paus", number: 76, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/waqu.jpg" },
     { name: "Rei de paus", number: 77, suit: "Arcanos Menores", img: "https://www.sacred-texts.com/tarot/pkt/img/waki.jpg" },
-    // ... adicione todas as cartas aqui
+    // ... adicione todas as cartas aqui!
 ];
 
 let selectedCard = null;
