--- a/TaroX.html
+++ b/TaroX.html
@@ -103,10 +103,10 @@ const tarotCards = [
     { name: "O Hierofante", number: 5, suit: "Arcanos Maiores", img: "tarox/05_TarotX.png" },
     { name: "Os Enamorados", number: 6, suit: "Arcanos Maiores", img: "tarox/06_TarotX.png" },
     { name: "O Carro", number: 7, suit: "Arcanos Maiores", img: "tarox/07_TarotX.png" },
-    { name: "A Justiça", number: 8, suit: "Arcanos Maiores", img: "tarox/08_TarotX.png" },
+    { name: "A Força", number: 8, suit: "Arcanos Maiores", img: "tarox/08_TarotX.png" },
     { name: "O Eremita", number: 9, suit: "Arcanos Maiores", img: "tarox/09_TarotX.png" },
     { name: "A Roda da Fortuna", number: 10, suit: "Arcanos Maiores", img: "tarox/10_TarotX.png" },
-    { name: "a Força", number: 11, suit: "Arcanos Maiores", img: "tarox/11_TarotX.png" },
+    { name: "A Justiça", number: 11, suit: "Arcanos Maiores", img: "tarox/11_TarotX.png" },
     { name: "O Enforcado", number: 12, suit: "Arcanos Maiores", img: "tarox/12_TarotX.png" },
     { name: "A Morte", number: 13, suit: "Arcanos Maiores", img: "tarox/13_TarotX.png" },
     { name: "A temperança", number: 14, suit: "Arcanos Maiores", img: "tarox/14_TarotX.png" },
@@ -117,7 +117,7 @@ const tarotCards = [
     { name: "O Sol", number: 19, suit: "Arcanos Maiores", img: "tarox/19_TarotX.png" },
     { name: "O Julgamento", number: 20, suit: "Arcanos Maiores", img: "tarox/20_TarotX.png" },
     { name: "O Mundo", number: 21, suit: "Arcanos Maiores", img: "tarox/21_TarotX.png" },
-    { name: "1 de copas", number: 22, suit: "Arcanos Menores", img: "tarox/01copas_TarotX.png" },
+    { name: "Ás de copas", number: 22, suit: "Arcanos Menores", img: "tarox/01copas_TarotX.png" },
     { name: "2 de copas", number: 23, suit: "Arcanos Menores", img: "tarox/02copas_TarotX.png" },
     { name: "3 de copas", number: 24, suit: "Arcanos Menores", img: "tarox/03copas_TarotX.png" },
     { name: "4 de copas", number: 25, suit: "Arcanos Menores", img: "tarox/04copas_TarotX.png" },
@@ -127,11 +127,11 @@ const tarotCards = [
     { name: "8 de copas", number: 29, suit: "Arcanos Menores", img: "tarox/08copas_TarotX.png" },
     { name: "9 de copas", number: 30, suit: "Arcanos Menores", img: "tarox/09copas_TarotX.png" },
     { name: "10 de copas", number: 31, suit: "Arcanos Menores", img: "tarox/10copas_TarotX.png" },
-    { name: "11 de copas", number: 32, suit: "Arcanos Menores", img: "tarox/11copas_TarotX.png" },
-    { name: "12 de copas", number: 33, suit: "Arcanos Menores", img: "tarox/12copas_TarotX.png" },
-    { name: "13 de copas", number: 34, suit: "Arcanos Menores", img: "tarox/13copas_TarotX.png" },
-    { name: "14 de copas", number: 35, suit: "Arcanos Menores", img: "tarox/14copas_TarotX.png" },
-    { name: "1 de espadas", number: 36, suit: "Arcanos Menores", img: "tarox/01espadas_TarotX.png" },
+    { name: "Valete de copas", number: 32, suit: "Arcanos Menores", img: "tarox/11copas_TarotX.png" },
+    { name: "Cavaleiro de copas", number: 33, suit: "Arcanos Menores", img: "tarox/12copas_TarotX.png" },
+    { name: "Rainha de copas", number: 34, suit: "Arcanos Menores", img: "tarox/13copas_TarotX.png" },
+    { name: "Rei de copas", number: 35, suit: "Arcanos Menores", img: "tarox/14copas_TarotX.png" },
+    { name: "Ás de espadas", number: 36, suit: "Arcanos Menores", img: "tarox/01espadas_TarotX.png" },
     { name: "2 de espadas", number: 37, suit: "Arcanos Menores", img: "tarox/02espadas_TarotX.png" },
     { name: "3 de espadas", number: 38, suit: "Arcanos Menores", img: "tarox/03espadas_TarotX.png" },
     { name: "4 de espadas", number: 39, suit: "Arcanos Menores", img: "tarox/04espadas_TarotX.png" },
@@ -141,11 +141,11 @@ const tarotCards = [
     { name: "8 de espadas", number: 43, suit: "Arcanos Menores", img: "tarox/08espadas_TarotX.png" },
     { name: "9 de espadas", number: 44, suit: "Arcanos Menores", img: "tarox/09espadas_TarotX.png" },
     { name: "10 de espadas", number: 45, suit: "Arcanos Menores", img: "tarox/10espadas_TarotX.png" },
-    { name: "11 de espadas", number: 46, suit: "Arcanos Menores", img: "tarox/11espadas_TarotX.png" },
-    { name: "12 de espadas", number: 47, suit: "Arcanos Menores", img: "tarox/12espadas_TarotX.png" },
-    { name: "13 de espadas", number: 48, suit: "Arcanos Menores", img: "tarox/13espadas_TarotX.png" },
-    { name: "14 de espadas", number: 49, suit: "Arcanos Menores", img: "tarox/14espadas_TarotX.png" },
-    { name: "1 de ouros", number: 50, suit: "Arcanos Menores", img: "tarox/01ouros_TarotX.png" },
+    { name: "Valete de espadas", number: 46, suit: "Arcanos Menores", img: "tarox/11espadas_TarotX.png" },
+    { name: "Cavaleiro de espadas", number: 47, suit: "Arcanos Menores", img: "tarox/12espadas_TarotX.png" },
+    { name: "Rainha de espadas", number: 48, suit: "Arcanos Menores", img: "tarox/13espadas_TarotX.png" },
+    { name: "Rei de espadas", number: 49, suit: "Arcanos Menores", img: "tarox/14espadas_TarotX.png" },
+    { name: "Ás de ouros", number: 50, suit: "Arcanos Menores", img: "tarox/01ouros_TarotX.png" },
     { name: "2 de ouros", number: 51, suit: "Arcanos Menores", img: "tarox/02ouros_TarotX.png" },
     { name: "3 de ouros", number: 52, suit: "Arcanos Menores", img: "tarox/03ouros_TarotX.png" },
     { name: "4 de ouros", number: 53, suit: "Arcanos Menores", img: "tarox/04ouros_TarotX.png" },
@@ -155,11 +155,11 @@ const tarotCards = [
     { name: "8 de ouros", number: 57, suit: "Arcanos Menores", img: "tarox/08ouros_TarotX.png" },
     { name: "9 de ouros", number: 58, suit: "Arcanos Menores", img: "tarox/09ouros_TarotX.png" },
     { name: "10 de ouros", number: 59, suit: "Arcanos Menores", img: "tarox/10ouros_TarotX.png" },
-    { name: "11 de ouros", number: 60, suit: "Arcanos Menores", img: "tarox/11ouros_TarotX.png" },
-    { name: "12 de ouros", number: 61, suit: "Arcanos Menores", img: "tarox/12ouros_TarotX.png" },
-    { name: "13 de ouros", number: 62, suit: "Arcanos Menores", img: "tarox/13ouros_TarotX.png" },
-    { name: "14 de ouros", number: 63, suit: "Arcanos Menores", img: "tarox/14ouros_TarotX.png" },
-    { name: "1 de paus", number: 64, suit: "Arcanos Menores", img: "tarox/01paus_TarotX.png" },
+    { name: "Valete de ouros", number: 60, suit: "Arcanos Menores", img: "tarox/11ouros_TarotX.png" },
+    { name: "Cavaleiro de ouros", number: 61, suit: "Arcanos Menores", img: "tarox/12ouros_TarotX.png" },
+    { name: "Rainha de ouros", number: 62, suit: "Arcanos Menores", img: "tarox/13ouros_TarotX.png" },
+    { name: "Rei de ouros", number: 63, suit: "Arcanos Menores", img: "tarox/14ouros_TarotX.png" },
+    { name: "Ás de paus", number: 64, suit: "Arcanos Menores", img: "tarox/01paus_TarotX.png" },
     { name: "2 de paus", number: 65, suit: "Arcanos Menores", img: "tarox/02paus_TarotX.png" },
     { name: "3 de paus", number: 66, suit: "Arcanos Menores", img: "tarox/03paus_TarotX.png" },
     { name: "4 de paus", number: 67, suit: "Arcanos Menores", img: "tarox/04paus_TarotX.png" },
@@ -169,11 +169,11 @@ const tarotCards = [
     { name: "8 de paus", number: 71, suit: "Arcanos Menores", img: "tarox/08paus_TarotX.png" },
     { name: "9 de paus", number: 72, suit: "Arcanos Menores", img: "tarox/09paus_TarotX.png" },
     { name: "10 de paus", number: 73, suit: "Arcanos Menores", img: "tarox/10paus_TarotX.png" },
-    { name: "11 de paus", number: 74, suit: "Arcanos Menores", img: "tarox/11paus_TarotX.png" },
-    { name: "12 de paus", number: 75, suit: "Arcanos Menores", img: "tarox/12paus_TarotX.png" },
-    { name: "13 de paus", number: 76, suit: "Arcanos Menores", img: "tarox/13paus_TarotX.png" },
-    { name: "14 de paus", number: 77, suit: "Arcanos Menores", img: "tarox/14paus_TarotX.png" },
-    // ... adicione todas as cartas aqui
+    { name: "Valete de paus", number: 74, suit: "Arcanos Menores", img: "tarox/11paus_TarotX.png" },
+    { name: "Cavaleiro de paus", number: 75, suit: "Arcanos Menores", img: "tarox/12paus_TarotX.png" },
+    { name: "Rainha de paus", number: 76, suit: "Arcanos Menores", img: "tarox/13paus_TarotX.png" },
+    { name: "Rei de paus", number: 77, suit: "Arcanos Menores", img: "tarox/14paus_TarotX.png" },
+    // ... adicione todas as cartas aqui!
 ];
 
 let selectedCard = null;
