--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
 <body>
+<div style="background-image: url('blackcat.jpeg'); height: 100%; width: 100%;">
 <h1>Omni Akashica</h1>
 </br></br>
 <h2>Computador</h2>
+<a href="TaroRiderWaite.html">Tarot Rider Waite</a></br>
 <a href="TaroX.html">TarotX</a></br>
 <a href="LenormandX.html">LenormandX</a></br>
 <a href="TaroIntuitivo.html">Tarô Intuitivo</a></br>
 <a href="TaroLuzESombra.hyml">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreais.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLux.html">Lenormand Lux</a></br>
-<a href="TaroRiderWaite.html">Tarô Rider Waite</a></br>
 </br></br>
 <h2>Celular</h2>
+<a href="TaroRiderWaitem.html">Tarot Rider Waite</a></br>
 <a href="TaroXm.html">TarotX</a></br>
 <a href="LenormandXm.html">LenormandX</a></br>
 <a href="TaroIntuitivom.html">Tarô Intuitivo</a></br>
 <a href="TaroLuzESombram.html">Tarô Luz e Sombra</a></br>
 <a href="TaroArcanosSurreaism.html">Tarô Arcanos Surreais</a></br>
 <a href="LenormandLuxm.html">Lenormand Lux</a></br>
-<a href="TaroRiderWaitem.html">Tarô Rider Waite</a></br>
-<p>Omni Akashica (2024) - Todos direitos reservados</p>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+</div>
 </body>
 </html>
